--- a/Logistic Regression with a Neural Network mindset.ipynb
+++ b/Logistic Regression with a Neural Network mindset.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "We will build a Logistic Regression, using a Neural Network mindset. The following Figure explains why **Logistic Regression is actually a very simple Neural Network!**\n",
     "\n",
-    "<img src=\"images/LogReg_kiank.png\" style=\"width:650px;height:400px;\">\n",
+    "<img src=\"LogReg_kiank.png\" style=\"width:650px;height:400px;\">\n",
     "\n",
     "**Mathematical expression of the algorithm**:\n",
     "\n",
@@ -46,6 +46,7 @@
     "Here are the two formulas we will be using for backpropagation: \n",
     "\n",
     "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m}X(A-Y)^T\\tag{5}$$\n",
+    "\n",
     "$$ \\frac{\\partial J}{\\partial b} = \\frac{1}{m} \\sum_{i=1}^m (a^{(i)}-y^{(i)})\\tag{6}$$\n",
     "\n",
     "**The main steps for building our Neural Network are:**\n",
