--- a/Logistic Regression with a Neural Network mindset.ipynb
+++ b/Logistic Regression with a Neural Network mindset.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Here are the two formulas we will be using for backpropagation: \n",
     "\n",
-    "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m}X(A-Y)^T\\tag{5}$$\n",
+    "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m}(X(A-Y)^T)\\tag{5}$$\n",
     "\n",
     "$$ \\frac{\\partial J}{\\partial b} = \\frac{1}{m} \\sum_{i=1}^m (a^{(i)}-y^{(i)})\\tag{6}$$\n",
     "\n",
