--- a/Logistic Regression with a Neural Network mindset.ipynb
+++ b/Logistic Regression with a Neural Network mindset.ipynb
@@ -45,9 +45,11 @@
     "\n",
     "Here are the two formulas we will be using for backpropagation: \n",
     "\n",
-    "$$ \\frac{\\partial J}{\\partial w} = $$\n",
-    "\n",
-    "\n",
+    "ss\n",
+    "sss\n",
+    "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m} X (A-Y)^T \\tag{5}$$\n",
+    "si\n",
+    "sp\n",
     "$$ \\frac{\\partial J}{\\partial b} = \\frac{1}{m} \\sum_{i=1}^m (a^{(i)}-y^{(i)})\\tag{6}$$\n",
     "\n",
     "**The main steps for building our Neural Network are:**\n",
