Update Logistic Regression with a Neural Network mindset.ipynb

--- a/Logistic Regression with a Neural Network mindset.ipynb
+++ b/Logistic Regression with a Neural Network mindset.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m} X (A-Y)^T \\tag{5}$$\n",
     "\n",
-    "\n",
+    "and\n",
     "$$ \\frac{\\partial J}{\\partial b} = \\frac{1}{m} \\sum_{i=1}^m (a^{(i)}-y^{(i)})\\tag{6}$$\n",
     "\n",
     "**The main steps for building our Neural Network are:**\n",
