--- a/Logistic Regression with a Neural Network mindset.ipynb
+++ b/Logistic Regression with a Neural Network mindset.ipynb
@@ -25,13 +25,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In computer science, an image is represented by a 3D array of shape $(length, height, depth = 3)$. However, when you read an image as the input of an algorithm you convert it to a vector of shape $(length*height*3, 1)$. In other words, you \"unroll\", or reshape, the 3D array into a 1D vector.\n",
+    "\n",
+    "<img src=\"images/image2vector_kiank.png\" style=\"width:500px;height:300;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### General Architecture of the learning algorithm ##\n",
     "\n",
     "It's time to design a simple algorithm to distinguish cat images from non-cat images.\n",
     "\n",
     "We will build a Logistic Regression, using a Neural Network mindset. The following Figure explains why **Logistic Regression is actually a very simple Neural Network!**\n",
     "\n",
-    "<img src=\Images\"LogReg_kiank.png\" style=\"width:650px;height:400px;\">\n",
+    "<img src=\"images/LogReg_kiank.png\" style=\"width:650px;height:400px;\">\n",
     "\n",
     "**Mathematical expression of the algorithm**:\n",
     "\n",
@@ -45,11 +54,7 @@
     "\n",
     "Here are the two formulas we will be using for backpropagation: \n",
     "\n",
-    "\n",
-    "\n",
-    "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m} X (A-Y)^T \\tag{5}$$\n",
-    "\n",
-    "and\n",
+    "$$ \\frac{\\partial J}{\\partial w} = \\frac{1}{m} X(A-Y)^T\\tag{5}$$\n",
     "$$ \\frac{\\partial J}{\\partial b} = \\frac{1}{m} \\sum_{i=1}^m (a^{(i)}-y^{(i)})\\tag{6}$$\n",
     "\n",
     "**The main steps for building our Neural Network are:**\n",
