--- a/Logistic Regression with a Neural Network mindset.ipynb
+++ b/Logistic Regression with a Neural Network mindset.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "We will build a Logistic Regression, using a Neural Network mindset. The following Figure explains why **Logistic Regression is actually a very simple Neural Network!**\n",
     "\n",
-    "<img src=\"images/LogReg_kiank.png\" style=\"width:650px;height:400px;\">\n",
+    "<img src=\"Images/LogReg_kiank.png\" style=\"width:650px;height:400px;\">\n",
     "\n",
     "**Mathematical expression of the algorithm**:\n",
     "\n",
